@@ -12,15 +12,15 @@ import com.ecommerce.project.repository.ProductRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.util.List;
-import java.util.UUID;
 import java.util.stream.Collectors;
 
 
@@ -70,7 +70,7 @@ public class ProductServiceImpl implements ProductService {
             }
         }
 
-        if(isProductNotPresent) {
+        if (isProductNotPresent) {
 
 
             //transfer here
@@ -93,46 +93,52 @@ public class ProductServiceImpl implements ProductService {
 
             return modelMapper.map(savedProduct, ProductDTO.class);
 
-        }else{
+        } else {
 
             throw
-                     new APIException("PRoduct already exist");
+                    new APIException("PRoduct already exist");
         }
     }
 
     @Override
-    public ProductResponse gettAllProducts() {
+    public ProductResponse gettAllProducts(Integer pageNumber, Integer pageSize, String sortBy, String sortOrder) {
 
-        //check if product is 0 or not
+        Sort sortByAndOrder = sortOrder.equalsIgnoreCase("asc")
+                ? Sort.by(sortBy).ascending()
+                : Sort.by(sortBy).descending();
 
+        Pageable pageDetails = PageRequest.of(pageNumber, pageSize, sortByAndOrder);
+
+        Page<Product> pageProducts = productRepository.findAll(pageDetails);
+
+        //不再從產品庫中獲取所有項目
 
 
         //for trasformation
-        List<Product> products = productRepository.findAll();
-
+        List<Product> products = pageProducts.getContent();
 
         List<ProductDTO> productDTOS = products.stream()
                 .map(product -> modelMapper.map(product, ProductDTO.class))
                 .collect(Collectors.toList());
 
 
-        if(products.isEmpty()){
-
-
+        if (products.isEmpty()) {
 
             throw new APIException("No PRoducts Exist!!");
         }
 
 
-
-
-
-
-
         ProductResponse productResponse = new ProductResponse();
 
         productResponse.setContent(productDTOS);
 
+        productResponse.setPageNumber(pageProducts.getNumber());
+
+        productResponse.setPageSize(pageProducts.getSize());
+
+        productResponse.setTotalElement(pageProducts.getTotalElements());
+
+        productResponse.setLastPage(pageProducts.isLast());
 
         return productResponse;
 
@@ -140,14 +146,31 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public ProductResponse searchByCategory(Long categoryId) {
+    public ProductResponse searchByCategory(Long categoryId, Integer pageNumber, Integer pageSize, String sortBy, String sortOrder) {
 
 
         Category category = categoryRepository.findById(categoryId)
                 .orElseThrow(() -> new ResourceNotFoundException("Category", "categoryId", categoryId));
 
+        Sort sortByAndOrder = sortOrder.equalsIgnoreCase("asc")
+                ? Sort.by(sortBy).ascending()
+                : Sort.by(sortBy).descending();
 
-        List<Product> products = productRepository.findByCategoryOrderByPriceAsc(category);
+        Pageable pageDetails = PageRequest.of(pageNumber, pageSize, sortByAndOrder);
+
+        Page<Product> pageProducts = productRepository.findByCategoryOrderByPriceAsc(category, pageDetails);
+
+        //不再從產品庫中獲取所有項目
+
+
+        //for trasformation
+        List<Product> products = pageProducts.getContent();
+
+
+        if(products.isEmpty()){
+
+            throw  new APIException(category.getCategoryName()+"category does not have any product");
+        }
 
 
         List<ProductDTO> productDTOS = products.stream()
@@ -166,20 +189,47 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public ProductResponse serachProductBykeyword(String keyword) {
+    public ProductResponse serachProductBykeyword(String keyword, Integer pageNumber, Integer pageSize, String sortBy, String sortOrder) {
 
 
-        List<Product> products = productRepository.findByProductNameLikeIgnoreCase('%' + keyword + '%');
+        Sort sortByAndOrder = sortOrder.equalsIgnoreCase("asc")
+                ? Sort.by(sortBy).ascending()
+                : Sort.by(sortBy).descending();
 
+
+        Pageable pageDetails = PageRequest.of(pageNumber, pageSize, sortByAndOrder);
+
+        Page<Product> pageProducts = productRepository.findByProductNameLikeIgnoreCase('%' + keyword + '%', pageDetails);
+
+
+        List<Product> products = pageProducts.getContent();
 
         List<ProductDTO> productDTOS = products.stream()
                 .map(product -> modelMapper.map(product, ProductDTO.class))
-                .collect(Collectors.toList());
+                .toList();
+
+        if(products.isEmpty()){
+
+            throw  new APIException("Product not found with keyword: "+keyword);
+        }
+
 
 
         ProductResponse productResponse = new ProductResponse();
 
         productResponse.setContent(productDTOS);
+
+
+        productResponse.setContent(productDTOS);
+
+        productResponse.setPageNumber(pageProducts.getNumber());
+
+        productResponse.setPageSize(pageProducts.getSize());
+
+        productResponse.setTotalElement(pageProducts.getTotalElements());
+
+        productResponse.setLastPage(pageProducts.isLast());
+
 
         return productResponse;
     }
@@ -209,8 +259,6 @@ public class ProductServiceImpl implements ProductService {
 
 
         return modelMapper.map(savedProduct, ProductDTO.class);
-
-
 
 
     }
